k8s/andrew-insurer.yaml
# andrew-insurer DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: andrew-insurer-deployment
  labels:
    tier: andrew-insurer
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      tier: andrew-insurer
  template:
    metadata:
      labels:
        tier: andrew-insurer
    spec:
      containers:
        - name: andrew-insurer
          image: antoineleguillou/andrew-insurer:06-04-2024.3
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 3000
            - containerPort: 3001
      restartPolicy: Always
---
# andrew-insurer SERVICES
apiVersion: v1
kind: Service
metadata:
  name: andrew-insurer-service
spec:
  selector:
    tier: andrew-insurer
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: public
